--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1907,6 +1907,52 @@ a.no-link {
     padding: 1rem;
   }
 }
+@media (max-height: 910px) {
+  .modal-card {
+    padding: 1rem;
+  }
+  .modal-card .modal__body {
+    max-width: 500px;
+  }
+  .modal-card .modal__picture {
+    max-height: 250px;
+  }
+  .modal-card .modal__content {
+    padding: 1rem 2rem 1.5rem;
+  }
+  .modal-card .modal__content ul li + li {
+    margin-top: 5px;
+  }
+}
+@media (max-height: 730px) {
+  .modal-card .modal__title {
+    font-size: 1.3rem;
+  }
+  .modal-card .modal__picture {
+    max-height: 200px;
+  }
+  .modal-card .modal__content ul li {
+    font-size: 0.8rem;
+  }
+}
+@media (max-height: 590px) {
+  .modal-card .modal__body {
+    max-width: 400px;
+  }
+  .modal-card .modal__title {
+    font-size: 1.3rem;
+  }
+  .modal-card .modal__picture {
+    max-height: 100px;
+    display: none;
+  }
+  .modal-card .modal__content {
+    padding: 1rem 2rem;
+  }
+  .modal-card .modal__content ul li {
+    font-size: 0.8rem;
+  }
+}
 @media (max-width: 480px) {
   .header__logo {
     width: 50px;
@@ -1960,59 +2006,13 @@ a.no-link {
   }
   .modal__body {
     padding: 1.5rem;
+    overflow: hidden;
   }
   .modal__title {
     font-size: 1.4rem;
-    padding-right: 50px;
-  }
-  .modal__picture {
-    display: none;
-  }
-}
-@media (max-height: 910px) {
-  .modal-card {
-    padding: 1rem;
-  }
-  .modal-card .modal__body {
-    max-width: 500px;
   }
   .modal-card .modal__picture {
-    max-height: 250px;
-  }
-  .modal-card .modal__content {
-    padding: 1rem 2rem 1.5rem;
-  }
-  .modal-card .modal__content ul li + li {
-    margin-top: 5px;
-  }
-}
-@media (max-height: 730px) {
-  .modal-card .modal__title {
-    font-size: 1.3rem;
-  }
-  .modal-card .modal__picture {
-    max-height: 200px;
-  }
-  .modal-card .modal__content ul li {
-    font-size: 0.8rem;
-  }
-}
-@media (max-height: 590px) {
-  .modal-card .modal__body {
-    max-width: 400px;
-  }
-  .modal-card .modal__title {
-    font-size: 1.3rem;
-  }
-  .modal-card .modal__picture {
-    max-height: 100px;
-    display: none;
-  }
-  .modal-card .modal__content {
-    padding: 1rem 2rem;
-  }
-  .modal-card .modal__content ul li {
-    font-size: 0.8rem;
+    max-height: 150px;
   }
 }
 @media (max-height: 410px) {
