remove opacity from modal bg

--- a/assets/style/_vars.scss
+++ b/assets/style/_vars.scss
@@ -13,7 +13,8 @@
 	 --footer-border: rgba(153, 157, 176, .2);
 	 //--footer-border: rgba(25, 45, 80, .2);
 	 --bg-dark: #01173e;
-	 --modal-bg: rgba(2,50,113, 75%);
+	 --modal-bg: rgba(2,50,113, 100%);
+	 //--modal-bg: rgba(2,50,113, 75%);
 	 //--a: #023271;
 	 //023271
 	 
